fix: wrap nav, and add padding

--- a/src/assets/css/workout.css
+++ b/src/assets/css/workout.css
@@ -62,6 +62,8 @@ label button {
 nav[role='tablist'] {
     display: flex;
     background-color: var(--background);
+    flex-wrap: wrap;
+    padding-inline: 1rem;
 }
 
 ot-tabs:not(:defined) { 
